-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 5.0, 7
-
Component/s: client-libs
-
b78
-
generic
-
windows_xp
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2178271 | 5.0-pool | Unassigned | P4 | Closed | Future Project |
On Windows, when DnD of files with non ASCII file names is performed between JVM, the dropped file names shows garbled data. This was working fine till Tiger-b09 & 1.4.2.
DnD of non ASCII files from native to JVM works fine.
Compile FileListDnDTest
By default data is provided for japanese locale, hence set user locale to ja
Run FileListDnDTest
Run another instance of FileListDnDTest
Drag from first frame's source list and drop on second frame's target list
The data dropped on target list of another VM is seen garbled.
Refer to attached screen shot.
NOTE:
There are another change request was created for XToolkit
"CR 6576211 DnD of File-List between JVM is broken for non ASCII file names - XToolkit"
DnD of non ASCII files from native to JVM works fine.
Compile FileListDnDTest
By default data is provided for japanese locale, hence set user locale to ja
Run FileListDnDTest
Run another instance of FileListDnDTest
Drag from first frame's source list and drop on second frame's target list
The data dropped on target list of another VM is seen garbled.
Refer to attached screen shot.
NOTE:
There are another change request was created for XToolkit
"CR 6576211 DnD of File-List between JVM is broken for non ASCII file names - XToolkit"
- backported by
-
JDK-2178271 REG: DnD of File-List between JVM is broken for non ASCII file names - Win32
-
- Closed
-
- relates to
-
JDK-6576211 DnD of File-List between JVM is broken for non ASCII file names - XToolkit
-
- Open
-
-
JDK-4899439 File uses strings for names but file names are byte arrays on OS
-
- Closed
-