5098433: REG: DnD of File-List between JVM is broken for non ASCII file names - Win32

Reviewed-by: uta, dav